--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.24.0"
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.24.0",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
