--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "^18.0.0",
     "antd": "^4.23.2",
     "axios": "^0.27.2",
+    "firebase": "^9.12.1",
+    "firebase-tools": "^11.14.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
