--- a/package.json
+++ b/package.json
@@ -20,12 +20,33 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar-scheduler": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "socket.io-client": "^4.5.4",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@editorjs/checklist": "1.1.0",
+    "@editorjs/code": "2.5.0",
+    "@editorjs/delimiter": "1.1.0",
+    "@editorjs/editorjs": "2.18.0",
+    "@editorjs/embed": "2.3.1",
+    "@editorjs/header": "2.5.0",
+    "@editorjs/image": "2.4.2",
+    "@editorjs/inline-code": "1.3.1",
+    "@editorjs/link": "2.2.1",
+    "@editorjs/list": "1.5.0",
+    "@editorjs/marker": "1.2.2",
+    "@editorjs/paragraph": "2.7.0",
+    "@editorjs/quote": "2.3.0",
+    "@editorjs/raw": "2.1.2",
+    "@editorjs/simple-image": "1.3.3",
+    "@editorjs/table": "1.2.2",
+    "@editorjs/warning": "1.1.1",
+    "editorjs-html": "3.0.5",
+    "react-editor-js": "1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
