--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-big-calendar-scheduler": "^0.1.5",
+    "react-big-calendar": "0.17.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
